# garden

./: README.md  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.husky/: pre-push
simulation/: Cargo.toml
simulation/src/: lib.rs  state.rs  window.rs
simulation/src/shaders/: shader.wgsl
web/: .prettierrc  eslint.config.js  index.html  package.json  vite.config.ts
web/src/: index.css  index.ts
