[package]
name = "garden-wasm"
version = "0.1.0"
authors = ["Miles Greenwark <millez.dev@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
winit = { version = "0.30" }
anyhow = "1.0"
env_logger = "0.11.10"
log = "0.4"
pollster = "0.4.0"
wgpu = { version = "29.0", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.69", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
] }


[profile.release]
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
